# mipt-plc

./: README.md
future/: Async.h  AsyncData.h  CMakeLists.txt  Exception.h  Future.h  PoolQueue.h  SimplePoolQueue.cpp  SimplePoolQueue.h  ThreadPool.h  main.cpp
linq/: CMakeLists.txt  Collection.h  Data.h  Sequence.cpp  Sequence.h  common.h
linq/data/: Data.h
linq/pipeline/: Pipeline.h
linq_py/: main.py  sequence.py
vm/: asm.py  description.md  fibonacci.asm  vm.py
vm/compilator/: __init__.py  instructions.py
vm/compiler/: __init__.py  instructions.py  parser.py  program.py
vm/vm/: vm.py
